themes/coursepress/style.css
/* ... */
li.submenu-active a, li.submenu-item a:hover{
    color: #23bee9;
    text-decoration: none;
}

#modules_form input[type="submit"].apply-button-enrolled.submit-elements-data-button{
    position: relative;
    float: left;
}

.apply-button-enrolled.submit-elements-data-button ~ #navigation-pagination.navigation{
    margin: 0px 0 0em;
}

div.workbook_units th{
    font-weight: 300;
    color: #b0b4b8;
    font-size: 16px;
}

div.workbook_units td,
div.workbook_units th{
    border-bottom: 1px dashed #d3d9d8;
}

div.workbook_units th{
    padding-top: 10px;
}

div.workbook_units td{
    padding-bottom: 6px;
    padding-top: 4px;
    overflow: hidden;
    text-overflow: ellipsis;
}

.not_submitted{
    color: #ea9c6b;
}

footer.comment-meta{
    display: inline;
}

.clearf:after {
    content: ".";
    display: block;
    clear: both;
    visibility: hidden;
    line-height: 0;
    height: 0;
}

.clearf {
    display: inline-block;
}

html[xmlns] .clearf {
    display: block;
}

* html .clearf {
    height: 1%;
}

/* WIDGETS */

.cp_featured_widget_title{
    background-color: #0facd9;
    color: #fff;
    font-size: 18px;
    padding: 10px 25px 10px 25px;
    text-transform: uppercase;
    text-align: center;
}

.cp_featured_widget .course-thumbnail img{
    border-bottom: 3px solid #ebe085;
    display: block;
    margin: auto;
}

.cp_featured_widget .cp_featured_widget_course_summary{
    color: #666666;
    line-height: 25px;
}

.cp_featured_widget_course_link a,
.cp_featured_widget_course_link a:visited,
.cp_featured_widget_course_link a:hover{
    color: #fff;
    background-color: #0facd9;
    font-size: 18px;
    padding: 7px 25px 7px 25px;
    text-transform: uppercase;
    text-align: center;
    display: block;
    margin-top: 15px;
    border-top: 3px solid #74d1d4;
}

.widget-title ~ .cp_featured_widget_title{
    margin-top: 10px;
}

.tree .tree-unit-right a{
    background-color: #8bdabc;
    color: #fff;
}

.tree .tree-page-right a{
    background-color: #8bdabc;
    color: #fff;
}

.course_structure_unit_label{
    background-color: #f3f3f3;
}

li.current-menu-item a,
li.current_page_item a{
    color: #74d1d4 !important;
}


/*
RESPONSIVE
*/

@media screen and ( max-width: 980px ) {
    .wrap, 
    .site-content,
    .content-side-area,
    #secondary.widget-area{
        width: 96%;
        margin-left: 2%;
        margin-right: 2%;
        position: relative;
    }

    .post-type-archive-course .quick-course-info{
        width: 69.9%;
    }
}

@media screen and ( max-width: 960px ) {
    .student-settings label,
    .student-settings label.right{
        width: 96%;
        margin-left: 2%;
        margin-right: 2%;
    }

    .post-type-archive-course section.article-content-right{
        float: right;
        margin-right: 8px;
        width: calc( 94% - 235px );
        margin-top: 15px;
    }

    .post-type-archive-course article.type-course h1{
        width: 95.6%;
        margin-left: 3%;
        margin-right: 3%;
    }

    .post-type-archive-course article.type-course h1 a, .post-type-archive-course article.type-course .entry-title a{
        width: 100%;
    }

    .post-type-archive-course .quick-course-info{
        width: calc( 92.9% - 235px );
    }

    .post-type-archive-course .quick-course-info.quick-course-info-extended{
        width: 97.9%;
    }

    #course-summary{
        padding: 2%;
    }

    .social-shares{
        margin-left: 2%;
        width: 100%;
    }

    .entry-content{
        margin-bottom: 30px;
        margin-left: 3%;
        margin-right: 3%;
    }

    .left-content{
        width: 96%;
    }

    .right-content{
        float: none;
        margin-left: auto;
        margin-right: auto;
    }

    .mejs-video{
        width: 100% !important;
    }

    .enroll-box-right{
        width: 100%;
    }

    .notification-archive-single-meta{
        float: none;
        width: 90px;
        margin-left: auto;
        margin-right: auto;
    }

    .notification-archive-single,
    .discussion-archive-single{
        width: 96%;
        margin-left: 2%;
        margin-right: 2%;
    }

    .discussion-archive-single{
        width: 96%;
        margin-left: 2%;
        margin-right: 2%;
    }

    .site-main [class*="navigation"]{
        overflow: visible;
    }

}


@media screen and ( max-width: 790px ) {

    #drop-mobile-nav{
        display: block;
        float: right;
    }

    .main-navigation ul {
        display: none;
    }

    .units-archive-list li {
        background-color: #f3f6f8;
        display: block;
        min-height: 110px;
        margin-bottom: 4px;
        float: left;
        padding-bottom: 20px;
        width: 100%;
    }

    .enroll-box-left{
        width: 100% !important;
    }


}

@media screen and ( max-width: 750px ) {

    .course-video{
        width: 100%;
    }
    .entry-content-excerpt{
        float: right;
        width: 100%;
        position: relative;
        max-height: 195px;
        overflow: hidden;
        text-overflow: ellipsis;
        margin-top: 30px;
    }

    .post-type-archive-course article.type-course figure,
    .post-type-archive-course article.type-course .course-lang{
        display: none;
    }

    .post-type-archive-course section.article-content-right{
        float: left;
        margin-left: 20px;
        width: 96%;
        margin-top: 15px;
    }

    .post-type-archive-course .quick-course-info{
        width: 97%;
        left: 0px;
        padding-left: 3%
    }

    .post-type-archive-course .quick-course-info.quick-course-info-extended{
        width: 97%;
        left: 0px;
        padding-left: 3%
    }



    .post-type-archive-course article.type-course h1,
    .post-type-archive-course article.type-course .entry-content p,
    header{
        width: 97%;
        margin-left: 0%;
        margin-right: 0%;
    }

    .entry-content {
        margin-bottom: 30px;
        margin-left: 0.5%;
        margin-right: 0%;
    }

}
/* ... */

